<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="errorConnection">Connection error</string>
    <string name="tryAgain">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">Easy Redmine</string>
    <string name="login_button_login">Login</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="tasks">Tasks</string>
    <string name="searchProject">Jump to project</string>
    <string name="newTask">New task</string>
    <string name="addComment">Add comment</string>
    <string name="insertTime">Insert time</string>
    <string name="activity">Activity</string>
    <string name="addTime">Add time</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="task_detail_info">Info</string>
    <string name="task_detail_additional_info">Additional info</string>
    <string name="task_detail_attachements">Attachments</string>
    <string name="task_detail_children">Children</string>
    <string name="task_detail_related">Related</string>
    <string name="task_detail_id">Id</string>
    <string name="task_detail_project">Project</string>
    <string name="task_detail_tracker">Tracker</string>
    <string name="task_detail_status">Status</string>
    <string name="task_detail_prirority">Priority</string>
    <string name="task_detail_author">Author</string>
    <string name="task_detail_due_date">Due date</string>
    <string name="task_detail_estimated_time">Estimated time</string>
    <string name="task_detail_spent_time">Spent time</string>
    <string name="task_list_item_due_date">Due date:</string>
    <string name="tasks_list_filter">Filters</string>
    <string name="tasks_list_filter_my_issues">My tasks</string>
    <string name="menu_new_issues">New task</string>
    <string name="menu_tasks">Tasks</string>
    <string name="login_button_easyredmine">I have Easy Redmine Account</string>
    <string name="login_button_redmine">I have Redmine account</string>
    <string name="login_button_no_account">I don\'t have any Redmine account</string>
    <string name="create_account_page_title">Create trial account</string>
    <string name="login_server_url">Easy Redmine URL</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_error_empty_url">Url cannot be empty</string>
    <string name="switch_to_easy_redmine">SWITCH TO EASY REDMINE</string>
    <string name="switch_to_redmine">SWITCH TO REDMINE</string>
    <string name="create_free_trial">CREATE FREE TRIAL</string>
    <string name="login_phone">Phone (Optional)</string>
    <string name="login_email">Email (Optional)</string>
    <string name="menu_title_edit">Edit project</string>
    <string name="menu_title_see_on_web">See on web</string>
    <string name="menu_title_delete">Delete</string>
    <string name="title_redmine">Redmine</string>
    <string name="title_easy_redmine">Easy Redmine</string>
    <string name="project_detail_statistics">Statistics</string>
    <string name="project_detail_issues">Tasks</string>
    <string name="project_detail_due_date">Due date</string>
    <string name="no_value">---</string>
    <string name="menu_title_filter">Set filters</string>
    <string name="filters">Filters</string>
    <string name="default_filter">Default</string>
    <string name="filter_my_issues">My tasks</string>
    <string name="filter_watched_by_me">I am watcher</string>
    <string name="filter_assigned_to_me">I am assignee</string>
    <string name="filter_i_am_author">I am author</string>
    <string name="filter_last_updated">Last updated</string>
    <string name="private_filter">Private</string>
    <string name="public_filter">Public</string>
    <string name="menu_title_journal">Journals</string>
    <string name="menu_title_add_time">Add time</string>
    <string name="task_detail_journals">History</string>
    <string name="task_detail_custom_item">Custom fields</string>
    <string name="comment_info_template">by %1$s %2$s</string>
    <string name="prefix_author">by</string>
    <string name="comment_hint">Enter your comment</string>
    <string name="menu_logout">Log out</string>
    <string name="logout_title">Log out</string>
    <string name="logout_content">Do you really want to log out?</string>
    <string name="agree">Confirm</string>
    <string name="disagree">Cancel</string>
    <string name="new_task_project">Project</string>
    <string name="add_time_time">Time</string>
    <string name="add_time_date">Date</string>
    <string name="add_time_comment">Comment</string>
    <string name="add_time_activity">Activity</string>
    <string name="new_task_subject">Subject</string>
    <string name="new_task_description">Description</string>
    <string name="new_task_category">Category</string>
    <string name="new_task_parent_task">Parent task</string>
    <string name="new_task_estimated_time">Estimated time</string>
    <string name="new_task_due_date">Due date</string>
    <string name="new_task_start_date">Start date</string>
    <string name="new_task_priority">Priority</string>
    <string name="new_task_done">Done</string>
    <string name="new_task_status">Status</string>
    <string name="new_task_tracker">Tracker</string>
    <string name="new_task_assignee">Assignee</string>
    <string name="validation_title">Error</string>
    <string name="add_time_validation_time">You need to add time</string>
    <string name="validation_ok">OK</string>
    <string name="add_time_validation_activity">Application was unable to download activity types</string>
    <string name="add_time_failure">Request failed</string>
    <string name="menu_title_edit_task">Edit task</string>
    <string name="dialog_title_delete_task">Delete task</string>
    <string name="dialog_content_delete_task">Do you really want to delete task?</string>
    <string name="error_you_cant_delete_this_issue">You don´t have permission to delete this task</string>
    <string name="filter_favorited">Favorited</string>
    <string name="filter_value_favorited" translatable="false"><![CDATA[favorited=1&set_filter=1]]></string>
    <string name="filter_value_assigned_to_me" translatable="false"><![CDATA[set_filter=1&status_id=o&assigned_to_id=me]]></string>
    <string name="filter_value_watched_by_me"><![CDATA[set_filter=1&status_id=o&watcher_id=me]]></string>
    <string name="filter_value_i_am_author"><![CDATA[set_filter=1&status_id=o&author_id=me]]></string>
    <string name="filter_value_last_updated"><![CDATA[set_filter=1&status_id=o&last_updated_on=7_days]]></string>
    <string name="insertComment">Insert comment</string>
    <string name="new_task_subject_hint">Insert subject</string>
    <string name="new_task_description_hint">Insert description</string>
    <string name="new_task_estimated_hint">Insert estimated time</string>
    <string name="new_task_parent_hint">#</string>
    <string name="new_task_due_date_hint">Set due date</string>
    <string name="new_task_start_date_hint">Set start date</string>
    <string name="task_detail_assignee">Assignee</string>
    <string name="file_not_found">File not found</string>
    <string name="add_attachment">Add attachment</string>
    <string name="attachments">Attachments</string>

    <string-array name="doneRatio">
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>
    <string name="title_activity_new_task">New task activity</string>
    <string name="confirm_remove_attachment">Remove attachment</string>
    <string name="confirm_remove_attachment_content">Do you want to remove this attachment from task?</string>
    <string name="action_remove_attachment">Remove</string>
    <string name="bad_credentials">Wrong username or password</string>
    <string name="unknown_host">Unknown host</string>
    <string name="group">Group %1$s</string>
    <string name="progress_dialog">Loading values</string>
    <string name="please_wait">Please wait. Synchronizing project values.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="title">Cancel action</string>
    <string name="content">Leaving this page will cause loss of your filled data.</string>
    <string name="editTask">Edit issue</string>
    <string name="creating_task">Creating new task</string>
    <string name="edit_task">Updating task</string>
    <string name="title_error">Error</string>

    <string name="dialog_message_adding_time">Saving time</string>
    <string name="task_new_custom_fields">Custom fields</string>
    <string name="dialog_multiselect_done">Done</string>
    <string name="login_dialog_logging">Validating credentials</string>
    <string name="login_redmine_url">Redmine URL</string>
    <string name="project_detail_sum_of_spent_time">Sum of spent time</string>
    <string name="project_detail_estimated_time">Estimated time</string>
    <string name="server_error_forbidden">This action is forbidden in Redmine</string>
    <string name="ticket_detail_none">None</string>
    <string name="journals_no_journals">No Journals</string>
    <string name="journal_dialog_sending_message">Sending message</string>
    <string name="app_dialog_work_in_progress">You have unfinished work on task.</string>
    <string name="app_dialog_work_in_progress_title">Saved task</string>
    <string name="app_dialog_work_in_progress_btn_show">Show</string>
    <string name="app_dialog_work_in_progress_btn_delete">Delete</string>
    <string name="app_dialog_synchronizing_projects">Synchronizing projects</string>
    <string name="server_error_general_error">Error occured while processing request</string>
    <string name="filter_all_tasks">All tasks</string>
    <string name="task_detail_milestone">Milestone</string>
    <string name="task_detail_start_date">Start Date</string>
    <string name="task_detail_category">Category</string>
    <string name="new_task_milestone">Milestone</string>
    <string name="comment">Comment</string>
    <string name="more">More</string>
    <string name="less">Less</string>

</resources>