<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:id="@+id/scrollView"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="autocomplete"
            custom:input_title="@string/new_task_project"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_hint="@string/new_task_subject_hint"
            custom:input_title="@string/new_task_subject"
            custom:input_unique_id="@+id/et_subject"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_hint="@string/new_task_description_hint"
            custom:input_inputType="description"
            custom:input_title="@string/new_task_description"
            custom:input_unique_id="@+id/et_description"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/tracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="spinner"
            custom:input_title="@string/new_task_tracker"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/assignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="autocomplete"
            custom:input_title="@string/new_task_assignee"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="spinner"
            custom:input_title="@string/new_task_priority"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="spinner"
            custom:input_title="@string/new_task_status"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="spinner"
            custom:input_title="@string/new_task_done"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/milestone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="spinner"
            custom:input_title="@string/new_task_milestone"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_hint="@string/new_task_start_date_hint"
            custom:input_inputComponent="date"
            custom:input_title="@string/new_task_start_date"
            custom:input_unique_id="@+id/et_start_date"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_hint="@string/new_task_due_date_hint"
            custom:input_inputComponent="date"
            custom:input_title="@string/new_task_due_date"
            custom:input_unique_id="@+id/et_due_date"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/estimatedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_hint="@string/new_task_estimated_hint"
            custom:input_inputType="number"
            custom:input_title="@string/new_task_estimated_time"
            custom:input_unique_id="@+id/et_estimated_time"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:input_hint="@string/new_task_parent_hint"
            custom:input_inputType="number"
            custom:input_title="@string/new_task_parent_task"
            custom:input_unique_id="@+id/et_parent"/>

        <cz.ackee.androidskeleton.ui.GmailInputView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:input_inputComponent="spinner"
            custom:input_title="@string/new_task_category"/>

        <LinearLayout
            android:id="@+id/attachments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAttachmentsTitle"
                style="@style/TextCollapsibleHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mediumGap"
                android:text="@string/attachments"/>

            <LinearLayout
                android:id="@+id/progressWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <LinearLayout
                android:id="@+id/attachmentsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <LinearLayout
                android:id="@+id/newAttachmentsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <ListView
                android:id="@+id/listAttachments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtCustomFieldsTitle"
                style="@style/TextCollapsibleHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mediumGap"
                android:text="@string/task_new_custom_fields"/>

            <LinearLayout
                android:id="@+id/layoutCustomFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>